# codex-process-guard

./: CMakeLists.txt  Program.cs  README.md  build.ps1  run-psguard.ps1
src/: app.cpp  core.cpp  core.h  native.cpp  native.h
tests/: tests.cpp
